# dc-up

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  DECISIONS.md  README.md  pyproject.toml  rel.ps1  zensical.toml
.accountability/: surfaces.toml
.github/: .importlinter  CODEOWNERS  lychee.toml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  links.yml  pre-release.yml  release-pypi.yml
docs/: index.md
src/dc_up/: __init__.py  __main__.py  baseline.py  baseline_utils.py  cli.py  detect.py  errors.py  fetch.py  load.py  plan.py  render.py  todo.py  types.py
src/dc_up/commands/: __init__.py  todo.py  update.py
src/dc_up/data/: defaults.toml  todo-surfaces.toml
tests/: test_cli.py  test_course_repo_detection.py  test_layer_inference.py  test_templates.py
tests/commands/: test_todo_command.py  test_update_command.py
