# ============================================================
# pyproject.toml (ALL-PY-PYPI)
# ============================================================

# ============================================================
# SECTION 1: PROJECT IDENTITY (name, version, dependencies)
# ============================================================

[project]
name = "dc-up" # Package distribution name: lowercase with dashes.
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["version"] # WHY: Version is computed from git tags at build time.
description = "Command-line tool for bringing repositories up to a managed baseline using layered canonical templates."
license = { file = "LICENSE" }
authors = [
    { name = "Denise Case" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "repository-baseline",
    "repository-templates",
    "template-management",
    "developer-tooling",
    "command-line-tool",
    "python",
    "uvx",
    "automation",
    "software-architecture",
]

dependencies = []

[project.optional-dependencies]
# WHY: Optional dependency groups keep the core install clean and focused.
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "build", # WHY: Build frontend for packaging validation when needed.
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine", # WHY: Required for artifact validation: twine check dist/*.
]

docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "zensical",
    "mkdocstrings[python]", # WHY: Auto-generate API docs from docstrings.
]

[project.scripts]
# WHY: dc-up matches the package name for direct uvx use.
dc-up = "dc_up.cli:main"

[project.urls]
Homepage = "https://github.com/denisecase/dc-up"
Repository = "https://github.com/denisecase/dc-up"
Documentation = "https://denisecase.github.io/dc-up/"
Issues = "https://github.com/denisecase/dc-up/issues"
Changelog = "https://github.com/denisecase/dc-up/blob/main/CHANGELOG.md"

# ============================================================
# SECTION 2: TOOL CONFIGURATION
# ============================================================

# === PYRIGHT ===

[tool.pyright]
# WHY: Strict type checking helps catch bugs early.
include = ["src", "tests"]
extraPaths = ["src"]
exclude = ["**/node_modules", "**/.*", ".venv", "**/__pycache__", "dist", "build"]
pythonVersion = "3.14"
reportMissingTypeStubs = "none"
reportPrivateUsage = "none"
typeCheckingMode = "strict"

# === PYTEST ===

[tool.pytest.ini_options]
# WHY: Consistent test discovery and coverage visibility.
minversion = "9.0"
testpaths = ["tests"]
addopts = "--cov=dc_up --cov-report=term-missing --cov-fail-under=65"

# === RUFF ===

[tool.ruff]
# WHY: Fast linting and formatting in one tool.
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88
preview = false
target-version = "py314"
unsafe-fixes = false

[tool.ruff.format]
# WHY: Stable formatter choices keep diffs small and predictable.
indent-style = "space"
line-ending = "auto"
quote-style = "preserve"

[tool.ruff.lint]
# WHY: Baseline correctness plus stricter categories.
select = [
    "E",   # Basic syntax and structural correctness
    "F",   # Undefined names and unused imports
    "W",   # Warnings that catch easy issues early
    "I",   # Deterministic import ordering
    "UP",  # Modern Python constructs
    "B",   # Common bug patterns

    "PTH", # Prefer pathlib patterns
    "C4",  # Comprehension correctness and clarity
    "SIM", # Simplify obvious complexity
    "RET", # Return practices

    "D",   # Docstring standards
    "S",   # Security checks
]
ignore = [
    "E501", # line length handled by formatter
    "D203", # conflicts with D211
    "D213", # conflicts with D212
    "S101", # allow assert in tests and internal invariants
]

[tool.ruff.lint.isort]
# WHY: Ordered imports keep diffs readable.
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# WHY: Some file categories need different lint rules.
"src/**/__init__.py" = ["F401"]
"src/**/_version.py" = ["ALL"]
"tests/**/*.py" = ["D", "B018", "B011", "S101"]
"src/**/py.typed" = ["ALL"]

[tool.ruff.lint.pydocstyle]
# REQ: Google style is the project-wide docstring convention.
convention = "google"

# ============================================================
# SECTION 3: BUILD SYSTEM
# ============================================================
#
# REQ.PROJECT: A build system MUST be declared for package discovery and publishing.
# REQ.STRUCTURE: All importable code MUST live under src/.
# WHY src/ layout: Prevents accidental imports from the repo root and ensures
# consistent behavior across IDEs, tests, CI, and PyPI.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.hooks.vcs]
# WHY: Writes computed version into src/*/_version.py at build time.
version-file = "src/dc_up/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/dc_up",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dc_up"]

[tool.hatch.version]
# Used when no git tags are present. Keep in sync with CITATION.cff.
fallback-version = "0.1.1"
# WHY: Version is derived from git tags at build time.
source = "vcs"
# WHY: Allow hatch-vcs to find the Git root from isolated build contexts.
search_parent_directories = true
tag-pattern = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"
